--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
     "@tanstack/react-query": "^4.28.0",
-    "@types/react-redux": "^7.1.25",
     "@types/react-router-dom": "^5.3.3",
     "dateformat": "^5.0.3",
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
+    "react-router-dom": "^6.10.0",
     "react-toastify": "^9.1.2",
+    "sass": "^1.60.0",
     "yup": "^1.0.2"
   },
   "devDependencies": {
