--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,10 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    
+    "strictNullChecks": true,
+    "strictFunctionTypes": false
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
