--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "yup": "^1.0.2"
   },
   "devDependencies": {
+    "@types/dateformat": "^5.0.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
